<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NFCActivity" >

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp" />

    <RelativeLayout
        android:id="@+id/gText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewInfo"
        android:layout_marginTop="20dip" >

        <EditText
            android:id="@+id/tText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text" />

        <Button
            android:id="@+id/bWrite"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tText"
            android:text="@string/bWrite" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gURI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gText" >

        <EditText
            android:id="@+id/tURI"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_URI" />

        <Button
            android:id="@+id/bWriteURI"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tURI"
            android:text="@string/bWrite" />
    </RelativeLayout>

    <TextView
        android:id="@+id/techs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gURI"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/techs" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/techs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/message" />

</RelativeLayout>